--- a/hitec_register/package.json
+++ b/hitec_register/package.json
@@ -13,7 +13,8 @@
     "@supabase/supabase-js": "^2.49.4",
     "dotenv": "^16.5.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
